# LabProg

./: Attivita.cpp  Attivita.h  CMakeLists.txt  Controller.cpp  Controller.h  MyApp.cpp  MyApp.h  MyFrame.cpp  MyFrame.h  Observer.h  Registro.cpp  Registro.h  Subject.h  main.cpp
test/: AttivitaTest.cpp  CMakeLists.txt  RegistroFixtureTest.cpp  runAllTest.cpp
test/lib/googletest/docs/: advanced.md  gmock_cook_book.md
test/lib/googletest/googlemock/include/gmock/: gmock-spec-builders.h
